<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Furball</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_new_game">New Game</string>
    <string name="menu_give_up">Give Up</string>
    <string name="menu_enter_level_code">Enter Level Code...</string>
    <string name="menu_sound_effects">Sound Effects</string>
    <string name="menu_quick_help">Quick Help</string>
    <string name="menu_about">About Furball\'s Adventures</string>
    
</resources>